<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GraZBotem">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/kolko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wynikGracz"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/kolkoWynik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="252dp"
            android:layout_marginRight="252dp"
            android:text="0"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/krzyzyk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kolko"
            android:text="@string/wynikBot"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/krzyzykWynik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kolkoWynik"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="251dp"
            android:layout_marginRight="251dp"
            android:text="0"
            android:textSize="25dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/pole00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
        <Button
            android:id="@+id/pole01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
        <Button
            android:id="@+id/pole02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/pole10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
        <Button
            android:id="@+id/pole11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
        <Button
            android:id="@+id/pole12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/pole20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
        <Button
            android:id="@+id/pole21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
        <Button
            android:id="@+id/pole22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="66dp"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/powrot1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:text="@string/powrot"
            android:onClick="Powrot"
            ></Button>
    </LinearLayout>

</LinearLayout>